# epub-io

./: .markdownlint.json  Cargo.toml  GOAL.md  TheLostHistoryofLiberalism(Rosenblatt,Helena)(z-library.sk,1lib.sk,z-lib.sk).epub  converted_test.epub
examples/: dump_chapter.rs
src/: cli.rs  lib.rs  main.rs  models.rs
src/pipeline/: classify.rs  enrich.rs  epub_reader.rs  mod.rs  reader.rs  tts.rs  writer.rs
src/server/: handlers.rs  mod.rs
tests/: test_chapter_fixture.rs  test_m4b.rs  test_wav.rs
tests/fixtures/: chapter.json
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/media/: main.js  style.css
vscode-extension/src/: ChapterEditManager.ts  EpubEditorProvider.ts  EpubTreeProvider.ts  extension.ts
vscode-extension/src/epub/: EpubModel.ts
vscode-extension/src/tools/: EpubCheck.ts  EpubIo.ts
