[package]
name = "epub-io"
version = "0.1.0"
edition = "2024"

[dependencies]
ebook = "0.1.2"
epub-builder = "0.8.3"
open-library-api-rs = "0.1.0"

axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
html-escape = "0.2"
anyhow = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
base64 = "0.21"
id3 = "1.17"
